--- a/src/scss/sections/template-editor-layout.scss
+++ b/src/scss/sections/template-editor-layout.scss
@@ -1,5 +1,29 @@
 .template-editor {
+  --header-height: 93px;
+  --toolbar-height: 50px;
+  --footer-height: 98px;
+  --sidebar-width: 400px;
+  --component-header-height: 44px;
+  --preview-holder-height: 200px;
+
+  &.active-banner-mode { --header-height : 111px; }
+  &.active-banner-mode-double { --header-height : 132px; }
+  &.hide-sidebar { --sidebar-width: 0px; }
+
+  --total-height: calc(var(--header-height));
+  --body-height: calc(var(--total-height) + var(--toolbar-height));
+  --attribute-list-height: calc(100vh - var(--body-height));
+
   background-color: #FFF;
+  height: calc(100vh - var(--total-height));
+}
+
+@media (max-width: $screen-sm) {
+  .template-editor {
+    --toolbar-height: 50px;
+    --sidebar-width: 360px;
+    --attribute-list-height: calc(100vh - var(--body-height) - var(--footer-height) - var(--preview-holder-height));
+  }
 }
 
 .template-editor-toolbar {
@@ -12,6 +36,7 @@
   overflow: hidden;
   text-overflow: clip;
   white-space: nowrap;
+  height: var(--toolbar-height);
 
   & i {
     font-size: 18px;
@@ -90,26 +115,42 @@
 .template-editor-body {
   margin-left: 0px;
   margin-right: 0px;
+  display: flex;
+  flex-flow: column-reverse;
+}
+
+@media (min-width: $screen-sm) {
+  .template-editor-body {
+    display: flex;
+    flex-flow: row;
+    height: calc(100vh - var(--body-height));
+  }
 }
 
 .preview-holder {
-  padding: 20px;
   background-image: linear-gradient(white, lightgray);
-  min-height: 50px;
   z-index: 1000;
+  width: 320px;
+  height: var(--preview-holder-height);
+  margin: auto;
+  overflow-x: scroll;
+  overflow-y: scroll;
 
   @media (min-width: $screen-sm) {
-    min-height: calc(100vh - 180px);
+    width: 100%;
+    height: 100%;
   }
 }
 
 .attribute-editor {
-  padding: 20px;
-  min-height: calc(100vh - 190px);
+  height: 100%;
+  //padding: 0px 10px 20px 20px;
 
   @media (min-width: $screen-sm) {
-    padding: 20px;
-    min-height: calc(100vh - 180px);
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: var(--sidebar-width);
+    width: var(--sidebar-width);
   }
 
   & a {
@@ -154,14 +195,16 @@
   & .attribute-list {
     font-size: 1.1em;
     font-weight: bold;
+    height: var(--attribute-list-height);
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   & .attribute-row {
     border-bottom: 1px solid rgb(242, 242, 242);
-    padding-bottom: 0.5em;
-    padding-top: 0.5em;
-    margin-left: 0;
-    margin-right: 0;
+    padding: 0.5em 0px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   & .attribute-desc {
@@ -179,9 +222,8 @@
     font-size: 1.2em;
     font-weight: bold;
     border-bottom: 1px solid rgb(230, 230, 230);
-    padding-bottom: 0.7em;
-    padding-top: 0.2em;
-    margin-bottom: 0.5em;
+    padding: 10px 0px;
+    margin: 0px 20px;
   }
 
   & .arrow-icon {
@@ -237,4 +279,23 @@
   & .modal-footer .btn-default {
     background: rgb(230, 230, 230);
   }
+}
+
+.te-scrollable-container {
+  --base-size : 5px;
+  overflow-y: auto;
+}
+
+.te-scrollable-container::-webkit-scrollbar {
+  width: var(--base-size);
+}
+
+.te-scrollable-container::-webkit-scrollbar-track {
+  background: #cccccc;
+  border-radius: var(--base-size);
+}
+
+.te-scrollable-container::-webkit-scrollbar-thumb {
+  border-radius: var(--base-size);
+  background: gray;
 }
